--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -28,6 +28,10 @@
   opacity: 0.5;
 }
 
+turqoise {
+  color: turquoise;
+}
+
 #link {
   color: black;
   text-decoration: none;
@@ -356,7 +360,7 @@ h4 {
   letter-spacing: -0.08rem;
 }
 h5 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   line-height: 1.5;
   letter-spacing: -0.05rem;
 }
@@ -381,7 +385,7 @@ h6 {
     font-size: 3rem;
   }
   h5 {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
   h6 {
     font-size: 1.5rem;
